<resources>
    <string name="app_name">taskmaster</string>
    <string name="action_settings">Settings</string>

    <string name="first_fragment_label">TaskMaster</string>
    <string name="second_fragment_label">TaskMaster</string>
    <string name="third_fragment_label">TaskMaster</string>
    <string name="add_task">Add Task</string>
    <string name="all_task">All Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_desc">Task Description</string>
    <string name="image_decs">image_decs</string>

    <string name="total">Total tasks: 0</string>


    <string name="my_tasks">My Tasks</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>